k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd-sftp
  labels:
    app: httpd-sftp
    app.kubernetes.io/component: httpd-sftp
    app.kubernetes.io/instance: httpd-sftp
    app.kubernetes.io/name: httpd-sftp
spec:
  to:
    kind: Service
    name: httpd-sftp
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
